move away from old jackson library